errors/cython_included_error.txt
(env) student@student-MS-7E02:~/Documents/PGSI/dev_test$ pgsi-analyzer benchmark run --algorithms hanoi binary-trees sieve --methods cpython ctypes cython --runs 10 --output results-standered/
Running benchmark suite:
  Algorithms: 3 (binary-trees, hanoi, sieve...)
  Methods: 3 (cpython, cython, ctypes)
  Runs per benchmark: 10
  Output directory: results-standered

Phase 1: Building benchmarks...
  Building binary-trees/cython... ✗ Error: Cython build error for /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/binary-trees/cython: Cython build failed for /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/binary-trees/cython:
stdout: running build_ext
building 'raw' extension
x86_64-linux-gnu-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fstack-protector-strong -Wformat -Werror=format-security -g -fwrapv -O2 -g -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -I/home/student/Documents/PGSI/env/include -I/usr/include/python3.10 -c raw.c -o build/temp.linux-x86_64-3.10/raw.o

stderr: raw.c:32:10: fatal error: Python.h: No such file or directory
   32 | #include "Python.h"
      |          ^~~~~~~~~~
compilation terminated.
error: command '/usr/bin/x86_64-linux-gnu-gcc' failed with exit code 1

  Building binary-trees/ctypes... ✓
  Building hanoi/cython... ✗ Error: Cython build error for /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/hanoi/cython: Cython build failed for /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/hanoi/cython:
stdout: running build_ext
building 'raw' extension
x86_64-linux-gnu-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fstack-protector-strong -Wformat -Werror=format-security -g -fwrapv -O2 -g -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -I/home/student/Documents/PGSI/env/include -I/usr/include/python3.10 -c raw.c -o build/temp.linux-x86_64-3.10/raw.o

stderr: raw.c:31:10: fatal error: Python.h: No such file or directory
   31 | #include "Python.h"
      |          ^~~~~~~~~~
compilation terminated.
error: command '/usr/bin/x86_64-linux-gnu-gcc' failed with exit code 1

  Building hanoi/ctypes... ✓
  Building sieve/cython... ✗ Error: Cython build error for /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/sieve/cython: Cython build failed for /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/sieve/cython:
stdout: running build_ext
building 'raw' extension
x86_64-linux-gnu-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -g -fstack-protector-strong -Wformat -Werror=format-security -g -fwrapv -O2 -g -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC -I/home/student/Documents/PGSI/env/include -I/usr/include/python3.10 -c raw.c -o build/temp.linux-x86_64-3.10/raw.o

stderr: raw.c:32:10: fatal error: Python.h: No such file or directory
   32 | #include "Python.h"
      |          ^~~~~~~~~~
compilation terminated.
error: command '/usr/bin/x86_64-linux-gnu-gcc' failed with exit code 1

  Building sieve/ctypes... ✓

Phase 2: Executing benchmarks...
  [1/9] binary-trees/cpython... ✓
  [2/9] binary-trees/cython... ✗ Error: Benchmark execution error for binary-trees/cython: Benchmark execution failed for binary-trees/cython:
Command: /home/student/Documents/PGSI/env/bin/python3 /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/binary-trees/cython/main.py
Return code: 1
stdout: 
stderr: WARNING:root:imports error 
 You need to install pymongo>=3.9.0 in order to use MongoOutput 
/home/student/Documents/PGSI/src/pgsi_analyzer/measurement/energy.py:39: UserWarning: Hardware energy measurement (RAPL) is unavailable: permission denied. Using estimation instead. For RAPL on Linux, run with cap_sys_rawio (e.g. sudo setcap cap_sys_rawio+ep $(which python3)) or as root.
  warn_if_rapl_unavailable(e)
Traceback (most recent call last):
  File "/home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/binary-trees/cython/main.py", line 4, in <module>
    import raw  # Import the compiled Cython module
ModuleNotFoundError: No module named 'raw'

  [3/9] binary-trees/ctypes... ✗ Error: Benchmark execution error for binary-trees/ctypes: Benchmark execution failed for binary-trees/ctypes:
Command: /home/student/Documents/PGSI/env/bin/python3 /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/binary-trees/ctypes/main.py
Return code: 1
stdout: 
stderr: WARNING:root:imports error 
 You need to install pymongo>=3.9.0 in order to use MongoOutput 
/home/student/Documents/PGSI/src/pgsi_analyzer/measurement/energy.py:39: UserWarning: Hardware energy measurement (RAPL) is unavailable: permission denied. Using estimation instead. For RAPL on Linux, run with cap_sys_rawio (e.g. sudo setcap cap_sys_rawio+ep $(which python3)) or as root.
  warn_if_rapl_unavailable(e)
Traceback (most recent call last):
  File "/home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/binary-trees/ctypes/main.py", line 7, in <module>
    if os.name == "nt":
NameError: name 'os' is not defined

  [4/9] hanoi/cpython... ✓
  [5/9] hanoi/cython... ✗ Error: Benchmark execution error for hanoi/cython: Benchmark execution failed for hanoi/cython:
Command: /home/student/Documents/PGSI/env/bin/python3 /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/hanoi/cython/main.py
Return code: 1
stdout: 
stderr:   File "/home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/hanoi/cython/main.py", line 46
    help=f"Number of disks (default: {__default__["hanoi"]["n"]})"
                                                   ^^^^^
SyntaxError: f-string: unmatched '['

  [6/9] hanoi/ctypes... ✓
  [7/9] sieve/cpython... ✓
  [8/9] sieve/cython... ✗ Error: Benchmark execution error for sieve/cython: Benchmark execution failed for sieve/cython:
Command: /home/student/Documents/PGSI/env/bin/python3 /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/sieve/cython/main.py
Return code: 1
stdout: 
stderr: WARNING:root:imports error 
 You need to install pymongo>=3.9.0 in order to use MongoOutput 
/home/student/Documents/PGSI/src/pgsi_analyzer/measurement/energy.py:39: UserWarning: Hardware energy measurement (RAPL) is unavailable: permission denied. Using estimation instead. For RAPL on Linux, run with cap_sys_rawio (e.g. sudo setcap cap_sys_rawio+ep $(which python3)) or as root.
  warn_if_rapl_unavailable(e)
Traceback (most recent call last):
  File "/home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/sieve/cython/main.py", line 9, in <module>
    from raw import driver
ModuleNotFoundError: No module named 'raw'

  [9/9] sieve/ctypes... ✗ Error: Benchmark execution error for sieve/ctypes: Benchmark execution failed for sieve/ctypes:
Command: /home/student/Documents/PGSI/env/bin/python3 /home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/sieve/ctypes/main.py
Return code: 1
stdout: 
stderr: WARNING:root:imports error 
 You need to install pymongo>=3.9.0 in order to use MongoOutput 
/home/student/Documents/PGSI/src/pgsi_analyzer/measurement/energy.py:39: UserWarning: Hardware energy measurement (RAPL) is unavailable: permission denied. Using estimation instead. For RAPL on Linux, run with cap_sys_rawio (e.g. sudo setcap cap_sys_rawio+ep $(which python3)) or as root.
  warn_if_rapl_unavailable(e)
Traceback (most recent call last):
  File "/home/student/Documents/PGSI/src/pgsi_analyzer/benchmarks/sieve/ctypes/main.py", line 13, in <module>
    lib = ctypes.CDLL("./libprime_sieve.so")
  File "/usr/lib/python3.10/ctypes/__init__.py", line 374, in __init__
    self._handle = _dlopen(self._name, mode)
OSError: ./libprime_sieve.so: cannot open shared object file: No such file or directory


Phase 3: Collecting raw measurement data...
Phase 4: Aggregating results per method...

Phase 5: Combining results across methods...
  Energy combined: results-standered/energy_combined.csv
  Time combined: results-standered/time_combined.csv

Phase 6: Calculating carbon footprint...
  Carbon footprint: results-standered/carbon_footprint.csv

Phase 7: Calculating GreenScore...
  GreenScore: results-standered/GreenScore.csv

======================================================================
Benchmark Suite Execution Complete
======================================================================
Final GreenScore ranking saved to: results-standered/GreenScore.csv

Top 3 methods by GreenScore (lower is better):
 method  energy_mean  time_mean  carbon_mean  green_score
 ctypes     0.000000   0.000000     0.000000     0.000000
cpython     0.333333   0.333333     0.333333     0.333333

✅ Benchmark suite completed successfully!
   GreenScore results: results-standered/GreenScore.csv
(env) student@student-MS-7E02:~/Documents/PGSI/dev_test$ ^C
(env) student@student-MS-7E02:~/Documents/PGSI/dev_test$ 